log/build_2024-04-13_00-16-35/bezier_root/stderr.log
  File "/home/yamashita/Robot_ws/install/bezier_root/lib/python3.10/site-packages/bezier_root/bezier.py", line 4
    from coordinate_msg/msg import Coordinate
                       ^
SyntaxError: invalid syntax

